# Silence-of-The-Lambdas

./: .gitignore  .terraform.lock.hcl  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-out  bazel-silence-of-the-lambdas  bazel-testlogs  bazel_build.sh  beta.tf  bootstrap  build_and_zip.sh  build_and_zip_and_deploy.sh  deploy.sh  go.mod  go.sum  local_setup.sh  shared-local-instance.db  silence_of_the_lambdas.go
handlers/: BUILD.bazel  apiresponses.go  handler.go  killers.go  killers_test.go  victims.go  victims_test.go
handlers/killers/: killers.go
handlers/victims/: victims.go
internal/dynamodb/: killers.go  silence_of_the_lambdas_db.go  silence_of_the_lambs_db.go  testclient.go
internal/silence_of_the_lambdas/: BUILD.bazel  killers.go  killers_test.go  silence_of_the_lambdas.go  testclient.go  victims.go  victims_test.go
internal/silence_of_the_lambs_db/: BUILD.bazel  killers.go  killers_test.go  mock_db.go  silence_of_the_lambdas_db.go  testclient.go  victims.go  victims_test.go
