load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

filegroup(
    name = "env_file",
    srcs = [".env"],
)

go_binary(
    name = "bootstrap",
    embed = [":Silence-of-The-Lambdas_lib"],
    goarch = "arm64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

genrule(
    name = "deployment",
    srcs = [
        ":bootstrap",
        ":env_file",
    ],
    outs = ["deployment.zip"],
    cmd = """
    zip -j $@ $(SRCS)
    """,
    visibility = ["//visibility:public"],
)

gazelle(
    name = "gazelle",
)

go_library(
    name = "Silence-of-The-Lambdas_lib",
    srcs = ["silence_of_the_lambdas.go"],
    importpath = "github.com/efuchsman/Silence-of-The-Lambdas",
    visibility = ["//visibility:private"],
    deps = [
        "//handlers",
        "//internal/silence_of_the_lambdas",
        "//internal/silence_of_the_lambs_db",
        "@com_github_aws_aws_lambda_go//events",
        "@com_github_aws_aws_lambda_go//lambda",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)
