load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "handlers",
    srcs = [
        "apiresponses.go",
        "handler.go",
        "killers.go",
        "victims.go",
    ],
    importpath = "github.com/efuchsman/Silence-of-The-Lambdas/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "//internal/silence_of_the_lambdas",
        "@com_github_aws_aws_lambda_go//events:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "handlers_test",
    srcs = [
        "killers_test.go",
        "victims_test.go",
    ],
    embed = [":handlers"],
    deps = [
        "//internal/silence_of_the_lambdas",
        "@com_github_aws_aws_lambda_go//events:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
