load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "silence_of_the_lambdas",
    srcs = [
        "killers.go",
        "silence_of_the_lambdas.go",
        "testclient.go",
        "victims.go",
    ],
    importpath = "github.com/efuchsman/Silence-of-The-Lambdas/internal/silence_of_the_lambdas",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/silence_of_the_lambs_db",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "silence_of_the_lambdas_test",
    srcs = [
        "killers_test.go",
        "victims_test.go",
    ],
    embed = [":silence_of_the_lambdas"],
    deps = [
        "//internal/silence_of_the_lambs_db",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
