load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "silence_of_the_lambs_db",
    srcs = [
        "killers.go",
        "mock_db.go",
        "silence_of_the_lambdas_db.go",
        "testclient.go",
        "victims.go",
    ],
    importpath = "github.com/efuchsman/Silence-of-The-Lambdas/internal/silence_of_the_lambs_db",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//aws/session:go_default_library",
        "@com_github_aws_aws_sdk_go//service/dynamodb:go_default_library",
        "@com_github_aws_aws_sdk_go//service/dynamodb/dynamodbattribute:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "silence_of_the_lambs_db_test",
    srcs = [
        "killers_test.go",
        "victims_test.go",
    ],
    embed = [":silence_of_the_lambs_db"],
    deps = [
        "@com_github_aws_aws_sdk_go//aws:go_default_library",
        "@com_github_aws_aws_sdk_go//service/dynamodb:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
    ],
)
